<resources>
    <string name="app_name">DBTest</string>
    <string name="name">Name</string>
    <string name="insert">Insert</string>
    <string name="id">Id</string>
    <string name="enter_your_name">Username</string>
    <string name="enter_your_email">Password</string>
    <string name="enter_your_website">Unique code</string>
    <string name="submit_data_to_server">Submit Data To DB</string>
    <string name="get_content_from_db">Get Data from DB</string>
    <string name="location">2. Location</string>
    <string name="get_loaction">Get Loaction</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="qrscanner">QRScanner</string>
    <string name="qrscanner_2">QRScanner 2</string>
    <string name="enter_your_username_and_password">Enter your username and password</string>
    <string name="login">Login</string>
    <string name="add_to_lesson">Check-In To Lesson</string>
    <string name="authentication">1. Authentication</string>
    <string name="lesson_code">3. Lesson code</string>
    <string name="location2">Location:</string>
    <string name="attendnce_check">Attendance check</string>
    <string name="get_courses_from_server">TEST: Get courses from server</string>
    <string name="load_lessons">Load lessons</string>
    <string name="check_your_lesson_attendance">Check your lesson attendance</string>
    <string name="register_to_course">Register to course</string>
    <string name="enter_course_id">Course ID</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register!</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="scan">Scan</string>
    <string name="check_attendance">Check attendance</string>
    <string name="welcome">Welcome!</string>
</resources>
