<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_name"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_email" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/enter_your_website" />

    <Button
        android:id="@+id/QRScannerButton"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/qrscanner" />

    <Button
        android:id="@+id/QRScanner2Button"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/qrscanner_2" />

    <Button
        android:id="@+id/insertContentButton"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_data_to_server" />

    <Button
        android:id="@+id/getContentButton"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/get_content_from_db" />

    <Button
        android:id="@+id/loginActivityButton"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />


    <TextView
        android:id="@+id/locationGPS"
        android:layout_width="1100px"
        android:layout_height="wrap_content"
        android:text="Waiting for GPS location..." />

    <TextView
        android:id="@+id/locationNetwork"
        android:layout_width="1100px"
        android:layout_height="wrap_content"
        android:text="Waiting for network location..." />



    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!-- everything you already have -->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </TableLayout>
    </ScrollView>

</LinearLayout>