<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1E88E5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="82.8dp"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/icon_transparent" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="370dp"
        android:layout_height="470dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fnTI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/first_name"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lnTI"
        android:layout_alignLeft="@+id/fnTI"
        android:layout_alignStart="@+id/fnTI"
        android:layout_below="@+id/fnTI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/last_name"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emTI"
        android:layout_alignLeft="@+id/lnTI"
        android:layout_alignStart="@+id/lnTI"
        android:layout_below="@+id/lnTI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/unTI"
        android:layout_alignLeft="@+id/emTI"
        android:layout_alignStart="@+id/emTI"
        android:layout_below="@+id/emTI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pwTI"
        android:layout_alignLeft="@+id/unTI"
        android:layout_alignStart="@+id/unTI"
        android:layout_below="@+id/unTI"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button style="@style/Widget.AppCompat.Button"
        android:id="@+id/createNewAccount"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pwTI"
        android:layout_alignStart="@+id/pwTI"
        android:layout_below="@+id/pwTI"
        android:layout_marginTop="35dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:background="#0D47A1"
        android:textColor="#FFFFFF"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createNewAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:textColor="#757575" />


</RelativeLayout>