<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_lesson"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/authentication"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:text="@string/lesson_code"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="25dp"
        android:text="@string/location2"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/loginOK"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        app:srcCompat="@color/common_google_signin_btn_text_dark_default" />

    <ImageView
        android:id="@+id/codeOK"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/loginOK"
        android:layout_alignStart="@+id/loginOK"
        app:srcCompat="@color/common_google_signin_btn_text_dark_default" />

    <ImageView
        android:id="@+id/locationOK"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/codeOK"
        android:layout_alignStart="@+id/codeOK"
        app:srcCompat="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/addToLessonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/locationOK"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/locationOK"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/locationOK"
        android:layout_marginTop="41dp"
        android:text="@string/add_to_lesson" />

    <Button
        android:id="@+id/scanQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/codeOK"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Scan" />


</RelativeLayout>